[tool.poetry]
name = "papers-fetcher"
version = "0.1.0"
description = "Fetch PubMed papers with non-academic (pharma/biotech) authors"
authors = ["Your Name <your.email@example.com>"]
packages = [{ include = "papers_fetcher" }]

[tool.poetry.scripts]
get-papers-list = "main:main"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
